Fixed action buttons and rulebook alignment

--- a/src/components/Rulebook.css
+++ b/src/components/Rulebook.css
@@ -3,55 +3,55 @@
     padding: 30px;
   }
   
-  .rulebook h2 {
-    margin-top: 0;
-    color: #007bff;
-    font-size: 24px;
-  }
+.rulebook h2 {
+  margin-top: 0;
+  color: #007bff;
+  font-size: 24px;
+}
   
-  .section h3 {
-    font-size: 20px;
-    color: #333;
-    margin-bottom: 10px;
-  }
+.section h3 {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+}
   
-  .section ul {
-    list-style-type: disc;
-    margin: 0 0 20px 20px;
-    padding: 0;
-  }
+.section ul {
+  list-style-type: disc;
+  margin: 0 0 20px 20px;
+  padding: 0;
+}
   
-  .section ul li {
-    margin-bottom: 10px;
-    font-size: 16px;
-    color: #555;
-  }
+.section ul li {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #555;
+}
   
-  .navigation {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
   
-  .navigation button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-  }
+.navigation button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
   
-  .navigation button:hover {
-    background-color: #0056b3;
-  }
+.navigation button:hover {
+  background-color: #0056b3;
+}
 
-  .rulebook-button-container {
-    position: relative;
-    margin-top: -10%;
-    margin-left: 72%;
-    width: 200px;
+.rulebook-button-container {
+  position: relative;
+  margin-top: -10%;
+  margin-left: 72%;
+  width: 200px;
 }
   
 .rulebook-button {
@@ -63,7 +63,17 @@
     border: none;
     border-radius: 4px;
 }
-  .rulebook-button:hover {
-    background-color: #0056b3;
+
+.rulebook-button:hover {
+  background-color: #0056b3;
+}
+
+@media only screen and (max-width : 1920px) {
+  .rulebook-button-container {
+      position: relative;
+      margin-top: -5%;
+      margin-left: 73%;
+      width: 200px;
   }
+}
   
